@@ -2600,6 +2600,30 @@
         e.g. <code>fake-bridge-bridge-id</code>.
       </column>
 
+      <column name="other_config" key="hw-offload-priority"
+              type='{"type": "string"}'>
+        <p>
+          This configuration sets an explicit list of hardware offload
+          providers to try on this port.  The argument should be a
+          comma-separated list of hardware offload provider names, or the
+          word <code>none</code>.
+        </p>
+        <p>
+          If <code>none</code> is encountered in the list, further trying of
+          offload providers is stopped. For example, if the list only contains
+          <code>none</code>, hardware offload is disabled on this port even if
+          it is globally enabled. Note that unknown hardware offload provider
+          names are ignored.
+        </p>
+        <p>
+          If not set, uses the global
+          <ref table="Open_vSwitch" column="other_config"
+               key="hw-offload-priority"/>
+          configuration.  Changing this value after offload enablement requires
+          restarting the daemon.
+        </p>
+      </column>
+
       <column name="other_config" key="transient"
               type='{"type": "boolean"}'>
         <p>
